Changelog
=========


1.1.4 (unreleased)
------------------

- Add text to zoom buttons, since wcag 2.0 doesn't allow empty links.
  [mathias.leimgruber]

- Remove horizontal scrollbar in IE.
  [Kevin Bieri]

- Improve simplelayout styles (Dragging new layout + Simplelayout Porlet).
  [mathias.leimgruber]

- Implement moble logo viewlet.
  [mathias.leimgruber]

- Support a mobile logo.
  [mathias.leimgruber]

- Support the new html structure of the "current folder" item in the autocompletewidget.
  [mathias.leimgruber]

- Replace globalnav-selected with menu-selected id in rules.xml.
  [mathias.leimgruber]

- Add support for googles sitelinks searchbox.
  [mathias.leimgruber]


1.1.3 (2016-04-27)
------------------

- Adjust simplelayout layout fix in 1.1.2 to fix layout if you drag
  a block into a column.
  [elioschmutz]


1.1.2 (2016-04-27)
------------------

- Fix broken simplelayout layouts.
  [elioschmutz]


1.1.1 (2016-04-22)
------------------

- Fix side effect with hiding search button (livesearch/detailsearch).
  Accidentally the searchButton of the contenttree widget was hidden by the last bern.web 2.0 release.
  [mathias.leimgruber]


1.1.0 (2016-04-11)
------------------

- Add empty alt attributes to img tags. [jone]

- Fix http-equiv="X-UA-Compatible" header.
  [mathias.leimgruber]

- Remove duplicate accesskey 1 on portal-logo.
  [mathias.leimgruber]

- Add a hidden h2 to the logo markup. Without this separation the logo belongs
  semantically to the service navigation. This confuses users with screenreaders.
  [mathias.leimgruber]

- Extend menues/mobile scss by header/section tags to support menues without definition lists.
  [mathias.leimgruber]

- Wrap Paragraph-Tag arround text in div with documentDescription css class.
  [mathias.leimgruber]


1.0.0a4 (2015-12-09)
--------------------

- Fix image display with for form image widget.
  [mathias.leimgruber]


1.0.0a3 (2015-12-08)
--------------------
